# UFBD

./: .gitignore  CMakeLists.txt  README.md  codeArchitectureExplanation.txt  release_linux.sh
Examples/Cetacea/: cet72.treefile  cetacea.clades  cetacea.fossils  config_cetacea.cfg  console.txt  in.BV
Examples/Emydidae/: config_emydidae.cfg  emydidae.clades  emydidae.fasta  emydidae.fossils  emydidae.treefile  emydidae_partition.nex
Examples/Palaeodictyopterida/: config_palaeodictyopterida.cfg  palaeodictyopterida.fossils
FossilizedBirthDeathProcesses/: main.cpp
FossilizedBirthDeathProcesses/Core/IO/: AlignmentReader.cpp  AlignmentReader.hpp  EmpiricalRateMatrix.cpp  EmpiricalRateMatrix.hpp  FBDInput.cpp
FossilizedBirthDeathProcesses/Core/Parameters/: AdaptiveOperatorSampler.cpp  AdaptiveOperatorSampler.hpp  ParameterBranchRates.cpp  ParameterBranchRates.hpp  ParameterDouble.cpp  ParameterDouble.hpp  ParameterShrinkageField.cpp  ParameterShrinkageField.hpp  ParameterSimplex.cpp  ParameterSimplex.hpp  ParameterTree.cpp  ParameterTree.hpp  ParameterUnresolvedFossils.cpp  ParameterUnresolvedFossils.hpp
FossilizedBirthDeathProcesses/Core/SBC/: ForwardSimulator.cpp  ForwardSimulator.hpp  Sbc.cpp  Sbc.hpp  sbc_main.cpp  sbc_plot.py
FossilizedBirthDeathProcesses/Core/Tree/: Node.cpp  Node.hpp  Tree.cpp  Tree.hpp
FossilizedBirthDeathProcesses/Core/Utils/: Convergence.cpp  Convergence.hpp  Probability.cpp  Probability.hpp  ThreadPool.cpp  ThreadPool.hpp  UserSettings.cpp  UserSettings.hpp
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses/: FBDTreeModel.cpp  FBDTreeModel.hpp  Mcmc.cpp  Mcmc.hpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp  Node.hpp  Parameter.cpp  Parameter.hpp  ParameterDouble.cpp  ParameterDouble.hpp  ParameterFBDTree.cpp  ParameterFBDTree.hpp  ParameterTree.cpp  ParameterTree.hpp  PhylogeneticModel.hpp  RandomVariable.cpp  ReadCSV.cpp  ReadCSV.hpp  ReadTSV.cpp  ReadTSV.hpp  ThreadPool.cpp  Tree.cpp  Tree.hpp  UserSettings.cpp  UserSettings.hpp  WriteTSV.cpp  WriteTSV.hpp  main.cpp
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses.xcodeproj/: project.pbxproj
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses/Core/: Probability.cpp  Tree.cpp  Tree.hpp  UserSettings.hpp
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses/Eigen/: Core
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses/Mcmc/: Mcmc.cpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp
FossilizedBirthDeathProcesses/FossilizedBirthDeathProcesses/Models/: FBDTreeModel.cpp  FBDTreeModel.hpp  PhylogeneticModel.hpp
FossilizedBirthDeathProcesses/Mcmc/: ChainRunner.hpp  ConvergenceRunner.cpp  ConvergenceRunner.hpp  Mcmc.cpp  Mcmc.hpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp
FossilizedBirthDeathProcesses/Models/: ApproxBranchLengthLikelihood.cpp  ApproxBranchLengthLikelihood.hpp  FBDTreeModel.cpp  FBDTreeModel.hpp  GTRrateModel.cpp  GTRrateModel.hpp  GtrRateModel.cpp  GtrRateModel.hpp  PhylogeneticModel.cpp  RelaxedClockTreeModel.cpp  RelaxedClockTreeModel.hpp  SequenceCTMCModel.cpp  SequenceCTMCModel.hpp  SequenceLikelihood.cpp  SequenceLikelihood.hpp
UFBD/: codeArchitectureExplanation.txt  main.cpp
UFBD.xcodeproj/: project.pbxproj
UFBD.xcodeproj/xcshareddata/xcschemes/: FossilizedBirthDeathProcesses.xcscheme
UFBD/Core/IO/: AlignmentReader.cpp  AlignmentReader.hpp  ConfigReader.cpp  ConfigReader.hpp  FBDInput.cpp  FBDInput.hpp  ReadTSV.cpp  ReadTSV.hpp  WriteTSV.cpp  WriteTSV.hpp
UFBD/Core/Parameters/: Parameter.cpp  Parameter.hpp  ParameterBranchRates.cpp  ParameterBranchRates.hpp  ParameterDouble.cpp  ParameterDouble.hpp  ParameterOUField.cpp  ParameterOUField.hpp  ParameterShrinkageField.cpp  ParameterShrinkageField.hpp  ParameterSimplex.cpp  ParameterSimplex.hpp  ParameterTree.cpp  ParameterTree.hpp  (+2 more)
UFBD/Mcmc/: ChainRunner.cpp  ChainRunner.hpp  ConvergenceRunner.cpp  ConvergenceRunner.hpp  Mcmc.cpp  Mcmc.hpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp
UFBD/Models/: ApproxBranchLengthLikelihood.cpp  ApproxBranchLengthLikelihood.hpp  FBDTreeModel.cpp  FBDTreeModel.hpp  GTRrateModel.hpp  PhylogeneticModel.hpp  RelaxedClockTreeModel.cpp  RelaxedClockTreeModel.hpp  SequenceCTMCModel.cpp  SequenceCTMCModel.hpp  SequenceLikelihood.cpp  SequenceLikelihood.hpp
output/: params.tsv  trees.tsv
(+42 files in other folders)
